# NMPC

./: .clang-format-common.sh  .clang-format-fix.sh  .gitignore  CMakeLists.txt  README.md  _config.yml  index.html  package.xml
nmpc/: CMakeLists.txt  package.xml
nmpc_cgmres/: CMakeLists.txt  CgmresProblem_8h.html  CgmresProblem_8h__dep__incl.map  CgmresProblem_8h__dep__incl.md5  CgmresProblem_8h__incl.map  CgmresProblem_8h__incl.md5  CgmresProblem_8h_source.html  CgmresSolver_8h.html  CgmresSolver_8h__incl.map  CgmresSolver_8h__incl.md5  CgmresSolver_8h_source.html  Gmres_8h.html  Gmres_8h__incl.map  Gmres_8h__incl.md5  Gmres_8h_source.html  OdeSolver_8h.html  OdeSolver_8h__dep__incl.map  OdeSolver_8h__dep__incl.md5  OdeSolver_8h__incl.map  OdeSolver_8h__incl.md5  OdeSolver_8h_source.html  README.md  README_8md.html  README_8md_source.html  _formulas.tex  annotated.html  classes.html  classnmpc__cgmres_1_1CgmresProblem-members.html  classnmpc__cgmres_1_1CgmresProblem.html  classnmpc__cgmres_1_1CgmresSolver-members.html  classnmpc__cgmres_1_1CgmresSolver.html  classnmpc__cgmres_1_1EulerOdeSolver-members.html  classnmpc__cgmres_1_1EulerOdeSolver.html  classnmpc__cgmres_1_1EulerOdeSolver__coll__graph.map  classnmpc__cgmres_1_1EulerOdeSolver__coll__graph.md5  classnmpc__cgmres_1_1EulerOdeSolver__inherit__graph.map  classnmpc__cgmres_1_1EulerOdeSolver__inherit__graph.md5  classnmpc__cgmres_1_1Gmres-members.html  classnmpc__cgmres_1_1Gmres.html  classnmpc__cgmres_1_1OdeSolver-members.html  (+34 more)
nmpc_cgmres/doc/: CMakeLists.txt  Doxyfile.extra.in  Doxyfile.in
nmpc_cgmres/include/nmpc_cgmres/: CgmresProblem.h  CgmresSolver.h  Gmres.h  OdeSolver.h
nmpc_cgmres/scripts/: plotCgmresData.py
nmpc_cgmres/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  pages_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  (+18 more)
nmpc_cgmres/src/: CgmresSolver.cpp
nmpc_cgmres/tests/: CMakeLists.txt
nmpc_cgmres/tests/src/: CartPoleProblem.h  SemiactiveDamperProblem.h  TestCgmresSolver.cpp  TestGmres.cpp
nmpc_ddp/: BoxQP_8h.html  BoxQP_8h__dep__incl.map  BoxQP_8h__dep__incl.md5  BoxQP_8h__incl.map  BoxQP_8h__incl.md5  BoxQP_8h_source.html  CMakeLists.txt  DDPProblem_8h.html  DDPProblem_8h__dep__incl.map  DDPProblem_8h__dep__incl.md5  DDPProblem_8h__incl.map  DDPProblem_8h__incl.md5  DDPProblem_8h_source.html  DDPSolver_8h.html  DDPSolver_8h__incl.map  DDPSolver_8h__incl.md5  DDPSolver_8h_source.html  DDPSolver_8hpp.html  DDPSolver_8hpp__dep__incl.map  DDPSolver_8hpp__dep__incl.md5  DDPSolver_8hpp__incl.map  DDPSolver_8hpp__incl.md5  DDPSolver_8hpp_source.html  DDP_8h.html  DDP_8h__incl.map  DDP_8h__incl.md5  DDP_8h_source.html  DDP_8hpp.html  DDP_8hpp__dep__incl.map  DDP_8hpp__dep__incl.md5  DDP_8hpp__incl.map  DDP_8hpp__incl.md5  DDP_8hpp_source.html  README.md  README_8md.html  README_8md_source.html  annotated.html  classes.html  classnmpc__ddp_1_1BoxQP-members.html  classnmpc__ddp_1_1BoxQP.html  (+38 more)
nmpc_ddp/doc/: CMakeLists.txt
nmpc_ddp/include/nmpc_ddp/: BoxQP.h  DDP.h  (+4 more)
nmpc_ddp/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  (+25 more)
nmpc_ddp/src/: CMakeLists.txt  DDP.cpp
nmpc_ddp/tests/: CMakeLists.txt
nmpc_fmpc/: CMakeLists.txt  FmpcProblem_8h.html  FmpcProblem_8h__dep__incl.map  FmpcProblem_8h__dep__incl.md5  FmpcProblem_8h__incl.map  FmpcProblem_8h__incl.md5  FmpcProblem_8h_source.html  FmpcSolver_8h.html  FmpcSolver_8h__incl.map  FmpcSolver_8h__incl.md5  FmpcSolver_8h_source.html  FmpcSolver_8hpp.html  FmpcSolver_8hpp__dep__incl.map  FmpcSolver_8hpp__dep__incl.md5  FmpcSolver_8hpp__incl.map  FmpcSolver_8hpp__incl.md5  FmpcSolver_8hpp_source.html  MathUtils_8h.html  MathUtils_8h__dep__incl.map  MathUtils_8h__dep__incl.md5  MathUtils_8h__incl.map  MathUtils_8h__incl.md5  MathUtils_8h_source.html  README.md  README_8md.html  annotated.html  classes.html  classnmpc__fmpc_1_1FmpcProblem-members.html  classnmpc__fmpc_1_1FmpcProblem.html  classnmpc__fmpc_1_1FmpcProblem__coll__graph.map  classnmpc__fmpc_1_1FmpcProblem__inherit__graph.md5  classnmpc__fmpc_1_1FmpcSolver-members.html  classnmpc__fmpc_1_1FmpcSolver.html  classnmpc__fmpc_1_1FmpcSolver__coll__graph.map  classnmpc__fmpc_1_1FmpcSolver__coll__graph.md5  dir_27b622402bc7deb661437bcd43df4c3f.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_aca491172853fa350dc5b25c28c0e4ad.html  dir_cc8a63370dbb94ab7a342e6c9eecbdfb.html  dir_dee2a471ed3fe4ef828a24e6db72ac1d.html  (+42 more)
nmpc_fmpc/doc/: CMakeLists.txt  Doxyfile.extra.in  Doxyfile.in
nmpc_fmpc/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  (+32 more)
nmpc_fmpc/tests/: CMakeLists.txt
tests/: CMakeLists.txt
tests/rviz/: TestDDPCartPole.rviz
tests/scripts/: plotTestDDPVerticalMotion.py
tests/src/: TestDDPBipedal.cpp  TestDDPCartPole.cpp  TestDDPCentroidalMotion.cpp  TestDDPVerticalMotion.cpp
tests/test/: TestDDPCartPole.test
(+38 files in other folders)
