<package format="2">
  <name>noc_ddp</name>
  <version>0.1.0</version>
  <description>
    Library for non-linear optimal control by differential dynamic programming
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>GPL</license>

  <url>http://ros.org/wiki/noc_ddp</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <build_depend>eigen</build_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>

  <doc_depend>doxygen</doc_depend>
</package>
