<package format="2">
  <name>nmpc</name>
  <version>0.1.0</version>
  <description>
    Metapackage for non-linear model predictive control (NMPC)
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/nmpc</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>nmpc_ddp</exec_depend>
  <exec_depend>nmpc_fmpc</exec_depend>
  <exec_depend>nmpc_cgmres</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
