<package format="2">
  <name>nmpc_cgmres</name>
  <version>0.1.0</version>
  <description>
    Non-linear model predictive control (NMPC) with continuation/GMRES method (C/GMRES)
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/nmpc_cgmres</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <build_depend>eigen</build_depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>visualization_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>rviz</test_depend>
  <test_depend>jsk_rviz_plugins</test_depend>

  <doc_depend>doxygen</doc_depend>
</package>
