<package format="3">
  <name>nmpc_ddp</name>
  <version>0.1.0</version>
  <description>
    Non-linear model predictive control (NMPC) with differential dynamic drogramming (DDP)
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/nmpc_ddp</url>
  <author>Masaki Murooka</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>rclcpp</build_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>visualization_msgs</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>rviz</test_depend>
  <test_depend>rqt_service_caller</test_depend>

  <doc_depend>doxygen</doc_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
